# oto

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: health.py  research.py  trades.py
backend/app/models/: financials.py  trades.py
backend/app/services/: research_service.py  sec_edgar.py  trading_service.py
backend/tests/: conftest.py  test_health.py  test_research.py  test_sec_edgar.py  test_trades.py
frontend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FinancialTable.tsx  MetricCard.tsx
frontend/lib/: api.ts  types.ts
frontend/tests/: FinancialTable.test.tsx  HomePage.test.tsx  MetricCard.test.tsx  setup-msw.ts
