[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oto-backend"
version = "0.1.0"
description = "OTO backend starter for open company research and trading"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
